@@ -1,3 +1,8 @@
+2008-06-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/36362
+	* gcc.c-torture/execute/20080529-1.c: New test.
+
 2008-06-06  Release Manager
 
 	* GCC 4.3.1 released.
